# TemplateAllegroWithCmake

./: CMakeLists.txt  README.md
Src/: main.cpp
